k8s/frontend-deployment.yaml
# frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logeique-frontend
  labels:
    app: logeique-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: logeique-frontend
  template:
    metadata:
      labels:
        app: logeique-frontend
    spec:
      containers:
      - name: logeique-frontend
        image: localhost/logeique-frontend:latest
        imagePullPolicy: Never 
        ports:
        - containerPort: 5173
        resources:
          limits:
            cpu: "300m"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: logeique-frontend-service
spec:
  selector:
    app: logeique-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
  type: ClusterIP
